fix: removing gap

--- a/src/components/main/Content/styles.css
+++ b/src/components/main/Content/styles.css
@@ -1,12 +1,8 @@
 .context-container {
-    
-    
     height: 100%;
     margin: 10px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
-    gap: 20px;
   }
