--- a/src/components/main/Transfer/styles.css
+++ b/src/components/main/Transfer/styles.css
@@ -1,3 +1,4 @@
+{}
 .transfer-form {
     display: flex;
     justify-content: center;
@@ -24,4 +25,6 @@
     display: flex;
     justify-content: space-around;
     flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
 }
